--- a/edition/sequence01.html
+++ b/edition/sequence01.html
@@ -35,14 +35,14 @@
          </header>
             <span class="pageNum">43</span><section>
                <h1>Un voyageur</h1>
-               <p>Je voyageois depuis deux ans pour m’instruire, lorsque j’appris, à <span class="placeName">Lyon</span>, que le gouvernement avoit ouvert des travaux considérables dans une partie de la
+               <p id="0001">Je voyageois depuis deux ans pour m’instruire, lorsque j’appris, à <span class="placeName">Lyon</span>, que le gouvernement avoit ouvert des travaux considérables dans une partie de la
                   <span class="placeName">Franche-Comté</span>.</p>
-               <p>Cette province offre une vaste carrière à l’histoire naturelle, au commerce, à l’industrie.</p>
+               <p id="0002">Cette province offre une vaste carrière à l’histoire naturelle, au commerce, à l’industrie.</p>
                <p>Elle offre des effets pittoresques, des montagnes qui portent l’orgueil jusques au
                   ciel, et concentre des gouffres liquides qui nous rappellent les prodiges du <span class="placeName">Wileska</span>, et tant d’autres merveilles de la nature. Animé par le sentiment des arts, je dirige
                   mes pas vers <span class="placeName">Salins</span>. À mon arrivée, je demande à voir ce que cette ville offroit d’intéressant. On me
                   conduit à la saline&nbsp;; le directeur guide ma curiosité.</p>
-               <p>On allume des torches résineuses qui jettoient plus de fumée que de flammes. Les rayons
+               <p id="0003">On allume des torches résineuses qui jettoient plus de fumée que de flammes. Les rayons
                   du soleil nous poursuivent, les portes des lieux sombres s’ouvrent, je descends dans
                   des antres profonds, creusés aux antipodes du <span class="placeName">mont Poupet</span> et du <span class="placeName">fort S. André</span>.</p>
                <p>Je découvre des voûtes d’une grande dimension qui se perdent dans l’immensité. Leurs
@@ -147,7 +147,7 @@
             <section>
                <h1>Vue perspective 
                   <br>du pont de la Loue</h1>
-               <h1>Planche 4</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f257.item">Planche 4</a></h1>
                <p>La vue de plusieurs vaisseaux démâtés, des voiles déployées, des appuis élevés pour
                   limiter un chemin sur l’éclat tremblant d’un fleuve agité, rappellent à mon souvenir
                   des pensées premières sur lesquelles on peut établir la succession des idées et le
@@ -241,7 +241,7 @@
             <section>
                <h1>Plans, coupes, élévations 
                   <br>d’une grange parée</h1>
-               <h1>Planche 5</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f259.item">Planche 5</a></h1>
                <h1>Le Voyageur et le conducteur des travaux</h1>
                <p>Quel est cet humble édifice qui présente au sommet, des piles espacées de deux diamètres,
                   appelant dans leur isolement les souffles septentrionaux, et provoquant la salubrité.
@@ -381,7 +381,7 @@
                <h1>Maison destinée aux surveillants 
                   <br>de la source de la Loue</h1>
                <h1>Plans, coupes, élévations&nbsp;; vue perspective</h1>
-               <h1>Planche 6</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f261.item">Planche 6</a></h1>
                <p>Déjà j’entends les Architectes de portrait, oui, les Architectes de portrait, crier
                   à l’extravagance&nbsp;; accoutumés à retracer servilement ce qu’ils voient, rarement ils
                   s’occupent de la conception d’un vaste tableau. Prenant une partie pour le tout, ils
@@ -473,7 +473,7 @@
                   <br>du charpentier de la graduation&nbsp;; 
                   <br>son atelier</h1>
                <h1>Plan, coupe, élévation</h1>
-               <h1>Planche 7</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f263.item">Planche 7</a></h1>
                <p>Je descends auprès de l’atelier de charpente, pour prendre quelques connoissances
                   de détail.</p>
                <p>Deux caves, deux chambres, deux greniers suffisoient aux besoins d’une famille entière.
@@ -541,7 +541,7 @@
             <section>
                <h1>Plan des pompes 
                   <br>du canal de graduation et des réservoirs</h1>
-               <h1>Planche 8</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f265.item">Planche 8</a></h1>
                <p>Nous arrivons au canal destiné à faire mouvoir les roues qui surélèvent les eaux de
                   <span class="placeName">Salins</span>, sur le bâtiment destiné à les graduer.</p>
                <p>Là cinq cents augets mobiles tournent par la force ascendante du poids qui les presse&nbsp;:
@@ -661,7 +661,7 @@
                   au point de vue le plus avantageux pour juger le tableau général du...</p>
             </section><span class="pageNum">57</span><section>
                <h1>Bâtiment de graduation</h1>
-               <h1>Planche 9</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f267.item">Planche 9</a></h1>
                <h1>Le Voyageur et l’Inspecteur</h1>
                <p>J’approche et vois une masse de bâtiment très—imposante. Son immensité occupe tout
                   le tableau, et le ciel m’offre le vuide de l’éthérée&nbsp;; en vain la lorgnette d’<span class="persName">Argus</span> voudroit accumuler ses verres, en saisir l’ensemble, en mesurer les dimensions&nbsp;;
@@ -736,7 +736,7 @@
             </section>
             <section>
                <h1>Petite hôtellerie</h1>
-               <h1>Planche 10</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f269.item">Planche 10</a></h1>
                <p>J’étais fort près de l’auberge, lorsqu’un char attelé de quatre pénibles coursiers,
                   de couleurs discordantes, se présente à ma vue. Ils avoient la tête basse, le col
                   dégarni, les pieds larges, et les boulets appesantis par l’argile accumulée au pourtour.
@@ -943,7 +943,7 @@
                   etc., etc., etc.</p>
             </section><span class="pageNum">63</span><section>
                <h1>Hospice</h1>
-               <h1>Planche 11</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f271.item">Planche 11</a></h1>
                <p>Ici la bienfaisance entraîne ma volonté, et la sûreté publique élève ma pensée.</p>
                <p>Dieu de l’harmonie affranchis ma voix de toute mesure&nbsp;! Le beau idéal est au-dessus
                   de nos loix&nbsp;; le génie s’indigne des leçons et secoue les entraves de l’habitude.
