ajout des planches

--- a/edition/sequence02.html
+++ b/edition/sequence02.html
@@ -36,7 +36,7 @@
             <span class="pageNum">65</span><section>
                <h1>Premier plan 
                   <br>de la saline de Chaux non exécuté</h1>
-               <h1>Planche 12</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f273.item">Planche 12</a></h1>
                <p>La première pensée d’un plan s’empreint des différentes modifications de l’ame, des
                   sensations qui nous affectent&nbsp;; souvent elle tient à des attractions étrangères. C’est
                   quelquefois un faux germe conçu dans la nature, entretenu dans le vuide de l’impuissance&nbsp;;
@@ -191,7 +191,7 @@
             </section>
             <section>
                <h1>Élévation et coupe</h1>
-               <h1>Planche 13</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f275.item">Planche 13</a></h1>
                <p>Les élévations ont les mêmes défauts que le plan.</p>
                <p>Une façade aussi étendue, aussi peu élevée devoit être isolée dans toutes ses parties.
                   Elle pouvoit être liée par des plantations utiles qui rompent la monotonie des lignes.
@@ -232,7 +232,7 @@
                   <br>des environs de la ville de Chaux</h1>
                <h1>Idées préliminaires qui ont dirigé le choix des lieux, l’isolement des maisons 
                   <br>et des autres établissements</h1>
-               <h1>Planche 14</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f277.item">Planche 14</a></h1>
                <p><span class="persName">L’Auteur de la nature</span> composa l’univers du concours des atômes&nbsp;; le chaos se développa, et cédant au monde
                   l’espace, leur donna l’impulsion attractive, organisa la voûte azurée, creusa la profondeur
                   des mers&nbsp;; aujourd’hui le concours des liquides trace un nouveau centre, et provoque
@@ -530,7 +530,7 @@
             </section><span class="pageNum">76</span><section>
                <h1>Vue perspective 
                   <br> de la ville de Chaux</h1>
-               <h1>Planche 15</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f279.item">Planche 15</a></h1>
                <p>La nature ayant donné aux yeux un crédit plus étendu qu’aux oreilles, il nous a paru
                   inutile d’entrer dans une discussion qui retraceroit imparfaitement ce que l’on a
                   dit du plan général de la ville, de ses environs, de ses dépendances, des établissements
@@ -575,7 +575,7 @@
             <section>
                <h1>Plan général de la saline, 
                   <br>tel qu’il est exécuté</h1>
-               <h1>Planche 16</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f281.item">Planche 16</a></h1>
                <p>Un des grands mobiles qui lient les gouvernements aux résultats intéressés de tous
                   les instants, c’est la disposition générale d’un plan qui rassemble à un centre éclairé
                   toutes les parties qui le composent. L’œil surveille facilement la ligne la plus courte&nbsp;;
