--- a/edition/sequence04.html
+++ b/edition/sequence04.html
@@ -1,21 +1,43 @@
-<html xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svg="http://www.w3.org/2000/svg">
+<!DOCTYPE html>
+<html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <link href="../css/edition.css" rel="stylesheet">
-      <title>L’Architecture de Ledoux Une édition numérique</title><script src="https://hypothes.is/embed.js" async></script></head>
+         <link href="../css/edition.css" rel="stylesheet">
+            <title>L’Architecture de Ledoux. Séquence 04</title>
+            <script src="https://hypothes.is/embed.js" async></script>
+   </head>
    <body>
       <header class="site-header" role="banner">
-         <div class="wrapper"><a class="site-title" rel="author" href="/">L’Architecture de Ledoux</a><nav class="site-nav"><input type="checkbox" id="nav-trigger" class="nav-trigger"><label for="nav-trigger"><span class="menu-icon"><svg viewBox="0 0 18 15" width="18px" height="15px">
-                        <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15H1.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h15.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"></path></svg></span></label><div class="trigger"><a class="page-link" href="/index">Séquencier</a><a class="page-link" href="/planches.html">Planches</a></div>
+         <div class="wrapper">
+            <a class="site-title" rel="author" href="/">L’Architecture de Ledoux</a>
+            <nav class="site-nav">
+               <input type="checkbox" id="nav-trigger" class="nav-trigger" />
+               <label for="nav-trigger">
+                  <span class="menu-icon">
+                     <svg viewBox="0 0 18 15" width="18px" height="15px">
+                        <path
+                           d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15H1.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h15.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"
+                           ></path>
+                     </svg>
+                  </span>
+               </label>
+               <div class="trigger">
+                  <a class="page-link" href="index.html">Séquencier</a>
+                  <a class="page-link" href="planches">Planches</a>
+               </div>
             </nav>
          </div>
       </header>
       <main>
+         <header>
+            <h2>Séquence 04</h2>
+            <h2></h2>
+         </header>
             <section>
                <h1>Plan 
                   <br>de la porte d’entrée 
                   <br>de la saline de Chaux</h1>
-               <h1>Planche 34</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f317">Planche 34</a></h1>
                <p>L’artiste, concentré dans la timidité qui resserre toutes ses facultés, se plaint
                   de quiconque ose plus que lui. Que cet homme est heureux&nbsp;! il décore la place publique&nbsp;;
                   il érige un temple au dieu de l’harmonie, un palais à la divinité du jour.</p>
@@ -42,7 +64,7 @@
             <section>
                <h1>Vue perspective 
                   <br>de la porte d’entrée de la saline de Chaux</h1>
-               <h1>Planche 55</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f319">Planche 35</a></h1>
                <p>Quoique l’on voie mal ce qui est éloigné de soi, cependant les étrangers sont plus
                   justes appréciateurs de l’élan des nations voisines, que celles-ci ne le sont d’elles-mêmes.
                   Ce qu’il y a de bien chez les uns conserve son essence, alors qu’elle se perd chez
@@ -135,7 +157,7 @@
                <h1>Coupe de la porte d’entrée 
                   <br>de la saline</h1>
                <h1>Coupe du bâtiment des ouvriers</h1>
-               <h1>Planche 36</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f321">Planche 36</a></h1>
                <p>Les monuments de l’antiquité, leurs fragments, quels qu’ils soient, portent un caractère
                   qui commande nos respects. Ceux des Architectes modernes pourroient contribuer à fixer
                   les bases de l’instruction, s’ils adaptoient ce qu’ils ont de bon à nos usages. En
@@ -177,7 +199,7 @@
                <h1>Maison de campagne</h1>
                <h1>Vue perspective</h1>
                <h1>Plans, coupe, élévations</h1>
-               <h1>Planche 37</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f323">Planche 37</a></h1>
                <p>L’uniformité des plans et des élévations est ennuyeuse&nbsp;: la ligne que vous parcourez
                   offre une progression de toutes les couleurs, de tous les tons que l’art emploie pour
                   faire aimer les jardins pittoresques. On ne voit pas ici ces rues immenses que l’on
@@ -220,7 +242,7 @@
             <section>
                <h1>Plan 
                   <br>des bâtiments destinés aux ouvriers</h1>
-               <h1>Planche 38</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f325">Planche 38</a></h1>
                <p><span class="persName">Joseph II</span>, empereur d’<span class="placeName">Allemagne</span>, le grand duc des <span class="placeName">Russies</span>, franchissent les climats rigoureux pour visiter les monuments qui distinguent le
                   siècle de <span class="persName">Louis XIV</span>. L’intérêt qu’ils portent aux soldats les conduisent aux <span class="placeName">Invalides</span>&nbsp;; ensuite ils visitent les artistes, les manufactures, etc. Eh&nbsp;! pourquoi ceux qui
                   habitent notre pays ne prendroient-ils pas connoissance des lieux où l’art a préparé
@@ -254,7 +276,7 @@
             </section>
             <section>
                <h1>Élévation du bâtiment des ouvriers</h1>
-               <h1>Planche 39</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f327">Planche 39</a></h1>
                <p>Les artistes qui réunissent la solidité de la pensée, la justesse du raisonnement
                   à la facilité de l’exécution, peuvent espérer des résultats heureux&nbsp;; il faut qu’ils
                   se dépouillent de ces lieux communs qui les assujettissent à des décorations de convention&nbsp;:
@@ -319,7 +341,7 @@
                <h1>Pacifère<span class="note"><span class="noteLabel">1. </span>Pacifère ou le Conciliateur. On dit morbifère, sommifère, mortifère, on peut dire
                      pacifère.</span></h1>
                <h1>Plans, coupes et perspective</h1>
-               <h1>Planche 40</h1><em class="foreign">Non mihi, si linguœ centum sint oraque centum,Ferrea vox, omnes scelerum comprendere formas, Omnia poenarum percurrere nomina possim.</em><p><span class="persName">Virgile</span></p>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f329">Planche 40</a></h1><em class="foreign">Non mihi, si linguœ centum sint oraque centum,Ferrea vox, omnes scelerum comprendere formas, Omnia poenarum percurrere nomina possim.</em><p><span class="persName">Virgile</span></p>
                <p>J’élevois un temple au bonheur. Dans mon aveugle enthousiasme j’amoncelois des pierres
                   les unes sur les autres, et je voulois en former un monument digne de la grande idée
                   dont se repaissoit mon imagination&nbsp;; tout-à-coup je suis transporté dans un de ces
@@ -392,7 +414,7 @@
                <h1>Plan des ateliers et logement des maréchaux</h1>
                <h1>plans 
                   <br>destinés à la fabrication des sels</h1>
-               <h1>Planche 41<span class="note"><span class="noteLabel">2. </span>Voyez la nomenclature. L’élévation est la même que celle de la planche 39</span></h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f331">Planche 41</a><span class="note"><span class="noteLabel">2. </span>Voyez la nomenclature. L’élévation est la même que celle de la planche 39</span></h1>
                <p>Chacun cherche à donner faveur aux choses qui lui plaisent. La multitude peu exercée
                   fuit ce qui n’est pas d’accord avec ses penchants&nbsp;: elle confond tout&nbsp;; elle est exclusive,
                   et ce n’est qu’en soulevant un voile trompeur, que l’Architecte peut découvrir ce
@@ -434,13 +456,13 @@
             <section>
                <h1>Maison d’un commis</h1>
                <h1>Plans, coupes, élévations</h1>
-               <h1>Planche 42</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f333">Planche 42</a></h1>
                <p>Voyez l’article de la planche 17.</p>
             </section><span class="pageNum">117</span><section>
                <h1>Maison d’union</h1>
                <h1>Plans, coupes élévation</h1>
                <h1>Vue perspective</h1>
-               <h1>Planche 42</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f333">Planche 42</a></h1>
                <p>Toute puissance est foible si elle n’est pas réunie, et quoique l’homme en société
                   soit lié à tous les genres d’attractions qui concentrent les intérêts communs, cependant
                   l’union est si nécessaire pour maintenir l’ordre, accélérer les élans de la vertu,
@@ -495,7 +517,7 @@
             <section>
                <h1>Élévation du bâtiment 
                   <br>destiné à la fabrication des sels</h1>
-               <h1>Planche 44</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f3">Planche 44</a></h1>
                <p>Deux élévations égales occupent, les côtés d’un cercle immense <span class="note"><span class="noteLabel">1. </span>Voyez le plan général, planche 16.</span>&nbsp;; les bâtiments qui offrent de grandes dimensions n’ont pas besoin d’ornements pour
                   les faire valoir&nbsp;; les détails sont perdus si on les voit de loin&nbsp;; les voit-on de
                   près, ils sont effacés par la masse dominante qui commande. Moins on divise les surfaces,
