--- a/edition/sequence04.html
+++ b/edition/sequence04.html
@@ -462,7 +462,7 @@
                <h1>Maison d’union</h1>
                <h1>Plans, coupes élévation</h1>
                <h1>Vue perspective</h1>
-               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f333">Planche 42</a></h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f335">Planche 43</a></h1>
                <p>Toute puissance est foible si elle n’est pas réunie, et quoique l’homme en société
                   soit lié à tous les genres d’attractions qui concentrent les intérêts communs, cependant
                   l’union est si nécessaire pour maintenir l’ordre, accélérer les élans de la vertu,
@@ -517,7 +517,7 @@
             <section>
                <h1>Élévation du bâtiment 
                   <br>destiné à la fabrication des sels</h1>
-               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f3">Planche 44</a></h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f337">Planche 44</a></h1>
                <p>Deux élévations égales occupent, les côtés d’un cercle immense <span class="note"><span class="noteLabel">1. </span>Voyez le plan général, planche 16.</span>&nbsp;; les bâtiments qui offrent de grandes dimensions n’ont pas besoin d’ornements pour
                   les faire valoir&nbsp;; les détails sont perdus si on les voit de loin&nbsp;; les voit-on de
                   près, ils sont effacés par la masse dominante qui commande. Moins on divise les surfaces,
@@ -616,7 +616,7 @@
             <section>
                <h1>Plan, coupe, élévation 
                   <br>du logement destiné au taxeur des bois</h1>
-               <h1>Planche 45</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f337.item">Planche 45</a></h1>
                <p>Cette caze exiguë précède la porte d’entrée de la saline&nbsp;; elle est occupée par la
                   surveillance chargée de distribuer les bulletins, d’envoyer les bois à la distance
                   la plus prochaine de leur emploi, afin d’éviter les manœuvres incertaines et les déplacements
@@ -661,7 +661,7 @@
             <section>
                <h1>Plans, coupes, élévation 
                   <br>d’une maison de campagne</h1>
-               <h1>Planche 46<span class="note"><span class="noteLabel">1. </span>Voyez la planche 24, le même esprit l’a dictée. Nous pensons, et l’expérience nous a même convaincus,
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f339">Planche 46</a><span class="note"><span class="noteLabel">1. </span>Voyez la planche 24, le même esprit l’a dictée. Nous pensons, et l’expérience nous a même convaincus,
                      que les effets qui tranchent sur les nuds du mur, sont les seuls que l’on emploie
                      avec succès dans les grandes distances où la nature de l’édifice ne permet pas les
                      péristyles en avant, ou un ordre colossal.</span></h1>
