--- a/edition/sequence04.html
+++ b/edition/sequence04.html
@@ -679,7 +679,7 @@
             <section>
                <h1>Fourneaux de la saline</h1>
                <h1>Coupe</h1>
-               <h1>Planches 47 et 48</h1>
+               <h1><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1047050b/f341">Planches 47 et 48</a></h1>
                <p>Il faut en convenir, les considérations personnelles sont souvent nuisibles à tous
                   les genres de progression&nbsp;; n’en soyons pas étonnés&nbsp;: ici c’est une affaire de finance.</p>
                <p>La nature a donné aux <span class="persName">Scytes</span> des moyens que les <span class="persName">Grecs</span> n’ont pu atteindre avec les meilleurs préceptes&nbsp;; ces derniers aimoient l’argent
